deploy/policies/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata: { name: disallow-latest-tag }
spec:
  validationFailureAction: Enforce
  rules:
    - name: require-fixed-image-tag
      match: { any: [ { resources: { kinds: [Deployment, Rollout] } } ] }
      validate:
        message: "Imagem não pode usar tag :latest."
        pattern:
          spec:
            template:
              spec:
                containers:
                  - image: "!*:latest"
